# takos-agent-engine

./: AGENTS.md  Cargo.toml  README.md  architecture.md
.reuse/: dep5
docs/: agent-runtime.md
examples/: demo.rs  object_demo.rs  sqlite_demo.rs
examples/common/: support.rs
src/: config.rs  error.rs  ids.rs  lib.rs  test_support.rs
src/domain/: abstract_node.rs  loop_state.rs  mod.rs  raw_node.rs  relation.rs  session.rs
src/engine/: context_assembler.rs  execution_graph.rs  graph_spec.rs  mod.rs  nodes.rs  scheduler.rs  session_engine.rs
src/memory/: activation.rs  distillation.rs  mod.rs  query.rs  scoring.rs
src/model/: embedding.rs  mod.rs  openai_chat.rs  openai_embedding.rs  openai_http.rs  runner.rs
src/storage/: graph.rs  in_memory.rs  mod.rs  object_store.rs  sqlite.rs  traits.rs  vector.rs
src/storage/object_store/: graph.rs  loop_state.rs  mod.rs  node.rs  store.rs  vector.rs
src/tools/: executor.rs  federated_memory_tools.rs  memory_tools.rs  mod.rs
