[package]
name = "takos-agent-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false
description = "Rust agent engine for Takos"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.16"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
