[package]
name = "takos-agent-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Rust agent engine for Takos"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.16"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[features]
default = []
openai-chat = ["dep:reqwest"]
openai-embeddings = ["dep:reqwest"]
# Deterministic stub implementations shared between the crate's own tests and
# the bundled examples (see `src/test_support.rs`). Non-default: enabling it
# promotes the otherwise `#[cfg(test)]`-only `test_support` module to `pub` so
# the examples can reuse the stubs. The bundled examples turn this on through
# the self dev-dependency below; downstream consumers never enable it.
test-support = []

[dev-dependencies]
# Enable the `test-support` feature for the crate's own examples (and tests)
# without making it a default feature. This self path-dependency is only active
# when this crate is the top-level package being built (examples/tests/benches);
# it does not propagate to downstream consumers' builds.
takos-agent-engine = { path = ".", features = ["test-support"] }
